--- a/css/footer.css
+++ b/css/footer.css
@@ -38,6 +38,7 @@ footer .box  address{
 footer ul li{
     list-style-type: none;
 }
+
 .box-1{
     display:flex;
     align-items: center;
@@ -70,12 +71,15 @@ footer ul li a:hover{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    flex-direction: column;
+
 }
 .box-2 ul{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.box-2 ul div{
+    display: flex;
     flex-direction: row;
 }
 .box-2 ul li{
@@ -119,6 +123,7 @@ footer ul li a:hover{
         flex-direction: column;
         padding:20px 0px;
     }
+    
 
 }
 
@@ -140,5 +145,11 @@ footer ul li a:hover{
     }
     .box-2 ul li a i{
         padding: 8px;
+    }
+    .box-2 ul{
+        flex-direction: column;
+    }
+    .box-2 ul div{
+        margin: 5px 0px;
     }
   }
