--- a/css/footer.css
+++ b/css/footer.css
@@ -113,7 +113,9 @@ footer ul li a:hover{
     color: white;
     font-family: sans-serif;
   }
-
+#width-padding{
+    padding: 1.5rem 1.9rem
+}
 @media (max-width: 900px) {
     
     html{
@@ -126,8 +128,6 @@ footer ul li a:hover{
     
 
 }
-
-
   @media  (max-width: 500px) {
     html{
       font-size: 8px;
@@ -145,6 +145,9 @@ footer ul li a:hover{
     }
     .box-2 ul li a i{
         padding: 8px;
+    }
+    #width-padding{
+        padding: 8px 11px;
     }
     .box-2 ul{
         flex-direction: column;
