--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ html{
 
 
 .header {
-    background-image: url('https://www.pngkey.com/png/full/666-6663236_blue-header-png-6-png-image-blue.png');
+    background-image: url('/photo/header-backgound.png');
     height: 70px;
     background-size: 100% 100%;
     display: flex;
