--- a/css/about.css
+++ b/css/about.css
@@ -9,16 +9,24 @@ main{
    justify-content: center;
    flex-direction: column;
 }
-.container-2{
-   height: 100%;
-   padding: 5rem;
-   max-width: 900px;
-   background-color: yellow;
-   font-size: 2rem;
-}
+
 .container-1{
   width: 100%;
   margin: 5rem 0rem;
+}
+.heading{
+  text-align: center;
+  padding: 3rem 1rem;
+}
+.heading h1{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 3rem;
+    font-weight: 600;
+    background-image: conic-gradient(#553c9a 30%, #ee4b2b 40%, #ee4b2b 70%, #00c2cb 80%, #553c9a);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+  
 }
 .container-3{
   height: 100%;
