--- a/css/about.css
+++ b/css/about.css
@@ -88,24 +88,52 @@ main{
 }
 .table{
   font-size: 2rem;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+}
+
+table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-family: sans-serif;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  font-size: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-table,tr,td,th{
-  border: 2px solid black;
-  border-collapse: collapse;
-  padding: 3px 5px;
   text-align: center;
 }
+table thead tr {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+}
+table th, td{
+    padding: 1.2rem 1.5rem;
+}
+
+table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+table tbody tr:hover {
+  font-weight: bold;
+  color: #009879;
+}
+
+
 @media screen and (max-width: 650px) {
-  .card{
-    width: 80%;
-  }
-  .our-team{
-    gap: 4rem;  
-    flex-direction: column;
-  }
+
+ 
+
 }
