--- a/css/main.css
+++ b/css/main.css
@@ -69,11 +69,11 @@ html{
     padding: 20px 50px;
     font-family: 'Baloo 2', cursive;
     height: 100%;
-    justify-content: space-evenly;
+    justify-content: center;
     text-align: center;
 }
 .img-header{
-    margin: 10px 0px 0px 0px;
+    margin: 10px 50px 0px 0px;
 }
 .header img{
     width: 100px;
@@ -85,9 +85,9 @@ html{
     line-height: 3.8rem;
 }
 
-.round{
+/* .round{
     border-radius: 50%;
-}
+} */
 
 .text-header-1{
     font-size: 2.4rem;
